update README and add pre-commit hook

--- a/README.Rmd
+++ b/README.Rmd
@@ -20,6 +20,12 @@ knitr::opts_chunk$set(
 [![lifecycle](https://img.shields.io/badge/lifecycle-experimental-orange)]()
 <!-- badges -->
 
+## Installation 
+
+```r
+pak::pkg_install("markheckmann/shelve")
+```
+
 ## Idea
 
 The `shelve` package tries to better integrate report generation into your R code.
